Avoid noisy background behind main content
Fixes one third of #16, as suggested by @Rangi42

--- a/css/default.scss
+++ b/css/default.scss
@@ -200,5 +200,6 @@ main {
 
 	max-width: $max-width;
 	// Prevent text from bumping sides on smaller windows
-	padding: 10px 20px 10px 10px;
+	padding: 10px 20px;
+	background: #eee;
 }
